// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "sqlite"
  url      = env("DATABASE_URL")
}

model User {
  id       String   @id @default(uuid())
  username String   @unique
  email    String   @unique
  password String
  answers  Answer[]
  votes    Vote[]
}

model Answer {
  id     String  @id @default(uuid())
  user   User?   @relation(fields: [userId], references: [id])
  userId String?
}

model Vote {
  id     String  @id @default(uuid())
  user   User?   @relation(fields: [userId], references: [id])
  userId String?
}

model Question {
  id          String @id @default(uuid())
  description String
}

model Exam {
  id String @id @default(uuid())
}

// Model de token's inválidos.
model BlackListToken {
  id     String  @id @default(uuid())
  token  String
  userId String?
}
