//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  username String [unique, not null]
  email String [unique, not null]
  password String [not null]
  votes Vote [not null]
  Post Post [not null]
}

Table Post {
  id String [pk]
  author User [not null]
  authorId String [not null]
  Question Question
  postId String
  Comment Comment
  parent Post
  parentId String
  children Post [not null]
  content String [not null]
}

Table Answer {
  id String [pk]
  question Question [not null]
  questionId String [not null]
  content String [not null]
  Vote Vote [not null]
  Comment Comment [not null]
}

Table Comment {
  id String [pk]
  Answer Answer
  answerId String
  post Post [not null]
  postId String [unique, not null]
}

Table Question {
  id String [pk]
  exam Exam [not null]
  examId String [not null]
  post Post [not null]
  postId String [unique, not null]
  answerId String
  Answer Answer [not null]
}

Table Vote {
  id String [pk]
  user User [not null]
  userId String [not null]
  answer Answer [not null]
  answerId String [not null]
}

Table Exam {
  id String [pk]
  questions Question [not null]
}

Table BlackListToken {
  id String [pk]
  token String [not null]
  userId String
}

Ref: Post.authorId > User.id

Ref: Post.parentId - Post.id

Ref: Answer.questionId > Question.id

Ref: Comment.answerId > Answer.id

Ref: Comment.postId - Post.id

Ref: Question.examId > Exam.id

Ref: Question.postId - Post.id

Ref: Vote.userId > User.id

Ref: Vote.answerId > Answer.id